# api_embrapa

./: README.md  dados.py  main.py  pyproject.toml  requirements.txt  teste.py
templates/: index.html
