[tool.poetry]
name = "api-embrapa"
version = "0.1.0"
description = ""
authors = ["Gabriel <brancaglioni.gabriel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
flask = "^3.0.3"
beautifulsoup4 = "^4.12.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
